--- a/src/components/main-head.astro
+++ b/src/components/main-head.astro
@@ -1,7 +1,9 @@
 ---
 import type { MainProps } from '../types';
 
-const { title, description } = Astro.props as MainProps;
+interface Props extends MainProps {}
+
+const { title, description } = Astro.props as Props;
 ---
 
 <head>
