--- a/src/components/post-head.astro
+++ b/src/components/post-head.astro
@@ -1,23 +1,13 @@
 ---
 import { Image } from '@astrojs/image/components';
 import type { BlogPost } from '../types';
+import { formatDate, slugify } from '../utils';
 
-const { title, date, category, author, image } = Astro.props
-  .blogPost as BlogPost;
-
-function slugify(text: string): string {
-  return text
-    .toLowerCase()
-    .replace(/\s+/g, '-')
-    .replace(/[^\w-]+/g, '')
-    .replace(/--+/g, '-')
-    .replace(/^-+/, '')
-    .replace(/-+$/, '');
+interface Props {
+  blogPost: BlogPost;
 }
 
-function formatDate(date: string): string {
-  return new Date(date).toLocaleDateString('de-DE');
-}
+const { title, date, category, author, image } = Astro.props.blogPost;
 ---
 
 <header>
