--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,26 +1,24 @@
 ---
+import PostCard from '../../components/post-card.astro';
 import MainLayout from '../../layouts/main-layout.astro';
+import type { BlogPost } from '../../types';
+
+const allPosts = await Astro.glob('./*.md');
 ---
 
 <MainLayout title='Blog' description='Blog'>
-  <ul>
-    <li>
-      <a href='./post-1/'>Post 1</a>
-    </li>
-    <li>
-      <a href='./post-2/'>Post 2</a>
-    </li>
-    <li>
-      <a href='./post-3/'>Post 3</a>
-    </li>
-    <li>
-      <a href='./post-4/'>Post 4</a>
-    </li>
-    <li>
-      <a href='./post-5/'>Post 5</a>
-    </li>
-    <li>
-      <a href='./post-6/'>Post 6</a>
-    </li>
-  </ul>
+  <section class='container' aria-label='New Blog Posts'>
+    <h1 class='h1'>New Blog Posts</h1>
+    <div class='post-container'>
+      {
+        allPosts.map((post) => (
+          <PostCard
+            blogPost={post.frontmatter as BlogPost} // TODO: no casting typeGuard?
+            url={post.url}
+            tagType='h2'
+          />
+        ))
+      }
+    </div>
+  </section>
 </MainLayout>
