refactor/(alias) added alias to types and utils directory

--- a/src/components/link.astro
+++ b/src/components/link.astro
@@ -1,6 +1,6 @@
 ---
+import type { LinkProps } from '@types';
 import { Icon } from 'astro-icon';
-import type { LinkProps } from '../types';
 
 interface Props extends LinkProps {}
 
