--- a/src/components/nav.astro
+++ b/src/components/nav.astro
@@ -1,7 +1,7 @@
 ---
+import { STYLE } from '@types';
 import { Icon } from 'astro-icon';
 import navData from '../data/nav-data';
-import { STYLE } from '../types';
 import Link from './link.astro';
 ---
 
