--- a/src/components/post-card.astro
+++ b/src/components/post-card.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from '@astrojs/image/components';
-import { BlogPost, STYLE } from '../types';
-import { formatDate, slugify } from '../utils';
+import { BlogPost, STYLE } from '@types';
+import { formatDate, slugify } from '@utils';
 import Link from './link.astro';
 
 interface Props {
