--- a/src/components/post-head.astro
+++ b/src/components/post-head.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from '@astrojs/image/components';
-import type { BlogPost } from '../types';
-import { formatDate, slugify } from '../utils';
+import type { BlogPost } from '@types';
+import { formatDate, slugify } from '@utils';
 
 interface Props {
   blogPost: BlogPost;
