--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,7 +1,7 @@
 ---
+import { SIDE, STYLE } from '@types';
 import Link from '../components/link.astro';
 import MainLayout from '../layouts/main-layout.astro';
-import { SIDE, STYLE } from '../types';
 ---
 
 <MainLayout title='Page Not Found'>
