--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,8 @@
 ---
 import { Image } from '@astrojs/image/components';
+import { STYLE } from '@types';
 import Link from '../components/link.astro';
 import MainLayout from '../layouts/main-layout.astro';
-import { STYLE } from '../types';
 ---
 
 <MainLayout title='About' description='about'>
