--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -1,6 +1,6 @@
 ---
+import type { BlogPost } from '@types';
 import PostHead from '../components/post-head.astro';
-import type { BlogPost } from '../types';
 import MainLayout from './main-layout.astro';
 
 const blogPost = Astro.props.frontmatter as BlogPost;
