--- a/src/layouts/main-layout.astro
+++ b/src/layouts/main-layout.astro
@@ -3,7 +3,7 @@ import Footer from '../components/footer.astro';
 import MainHead from '../components/main-head.astro';
 import Nav from '../components/nav.astro';
 import '../styles/global.css';
-import type { MainProps } from '../types';
+import type { MainProps } from '@types';
 
 const { title, description } = Astro.props as MainProps;
 ---
