--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,7 +1,7 @@
 ---
+import type { BlogPost } from '@types';
 import PostCard from '../../components/post-card.astro';
 import MainLayout from '../../layouts/main-layout.astro';
-import type { BlogPost } from '../../types';
 
 const allPosts = await Astro.glob('./*.md');
 ---
