feat(filteredBlogs) added function to sort and filter BlogPosts

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,9 +1,10 @@
 ---
 import type { BlogPost } from '@types';
+import { formatBlogPosts } from '@utils';
 import PostCard from '../../components/post-card.astro';
 import MainLayout from '../../layouts/main-layout.astro';
 
-const allPosts = await Astro.glob('./*.md');
+const filteredPosts = formatBlogPosts(await Astro.glob('./*.md'));
 ---
 
 <MainLayout title='Blog' description='Blog'>
@@ -11,7 +12,7 @@ const allPosts = await Astro.glob('./*.md');
     <h1 class='h1'>New Blog Posts</h1>
     <div class='post-container'>
       {
-        allPosts.map((post) => (
+       filteredPosts.map((post) => (
           <PostCard
             blogPost={post.frontmatter as BlogPost} // TODO: no casting typeGuard?
             url={post.url}
